--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://misirat.github.io/movieholic",
+  "homepage": "https://misirat.github.io/movieholic",
   "name": "movieholic",
   "version": "0.1.0",
   "private": true,
